--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -298,13 +298,37 @@ html.dark .text-red-600 {
   color: #f87171 !important;
 }
 
+html.dark .bg-red-50 {
+  background-color: oklch(0.22 0.04 20) !important;
+}
+
+html.dark .bg-red-100 {
+  background-color: oklch(0.25 0.05 20) !important;
+}
+
+html.dark .text-red-700 {
+  color: #fca5a5 !important;
+}
+
+html.dark .border-red-100 {
+  border-color: oklch(0.3 0.05 20) !important;
+}
+
 html.dark .hover\:bg-red-50:hover {
-  background-color: oklch(0.2 0.05 20) !important;
+  background-color: oklch(0.25 0.06 20) !important;
+}
+
+html.dark .hover\:bg-red-100:hover {
+  background-color: oklch(0.28 0.07 20) !important;
 }
 
 /* Indigo elements */
 html.dark .bg-indigo-50 {
   background-color: oklch(0.22 0.04 275) !important;
+}
+
+html.dark .bg-indigo-100 {
+  background-color: oklch(0.25 0.05 275) !important;
 }
 
 html.dark .text-indigo-700 {
@@ -319,8 +343,16 @@ html.dark .text-indigo-600 {
   color: oklch(0.7 0.15 275) !important;
 }
 
+html.dark .border-indigo-100 {
+  border-color: oklch(0.3 0.04 275) !important;
+}
+
 html.dark .hover\:bg-indigo-50:hover {
   background-color: oklch(0.26 0.04 275) !important;
+}
+
+html.dark .hover\:bg-indigo-100:hover {
+  background-color: oklch(0.28 0.04 275) !important;
 }
 
 /* Blue elements */
@@ -332,8 +364,20 @@ html.dark .text-blue-700 {
   color: oklch(0.75 0.17 255) !important;
 }
 
+html.dark .bg-blue-50 {
+  background-color: oklch(0.2 0.05 255) !important;
+}
+
 html.dark .bg-blue-100 {
   background-color: oklch(0.22 0.05 255) !important;
+}
+
+html.dark .border-blue-100 {
+  border-color: oklch(0.3 0.05 255) !important;
+}
+
+html.dark .hover\:bg-blue-100:hover {
+  background-color: oklch(0.25 0.06 255) !important;
 }
 
 /* Green elements */
@@ -343,6 +387,22 @@ html.dark .text-green-600 {
 
 html.dark .text-green-700 {
   color: oklch(0.77 0.17 155) !important;
+}
+
+html.dark .bg-green-50 {
+  background-color: oklch(0.2 0.05 155) !important;
+}
+
+html.dark .bg-green-100 {
+  background-color: oklch(0.22 0.05 155) !important;
+}
+
+html.dark .border-green-100 {
+  border-color: oklch(0.3 0.05 155) !important;
+}
+
+html.dark .hover\:bg-green-100:hover {
+  background-color: oklch(0.25 0.06 155) !important;
 }
 
 /* Separators */
